tests/paczka1/fuzzy1/82667211.err
Error in line 3: hHVBvktS81Q S640 61,4
Error in line 6: hHVBvktS81Q S796 3,7
Error in line 18: hHVBvktS81Q S640 23,7
Error in line 25: WSO S796 36,5
